fixed loadingScreen scrollbar

--- a/Styles/global.css
+++ b/Styles/global.css
@@ -2,7 +2,7 @@
 
 html {
   scroll-padding: 50px;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 @supports (-moz-appearance: none) {
